# mlops-mini-platform

./: .gitignore  Example_HeartDiseasePrediction.ipynb  HeartDiseasePrediction.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: cli.py
experiments/: run_dashboard.py
scripts/: compare_metrics.py  package_results.py  run_dashboard.py  run_dashboard2py.py
tests/: test_compare_metrics.py  test_package_results.py
